# candis

./: .gitignore  README.md  loop_1.md  loop_2.md  loop_3.md  loop_4.md  loop_5.md  looping_plan.md  new_plan.md  plan.md  pyproject.toml  rank.py  requirements-embed.txt  requirements-sandbox.txt  requirements.txt
cache/: llm_expansion.jsonl  llm_labels.jsonl  llm_rerank.jsonl
data/: job_description.txt
docs/: ablation_evidence_graph.md  ablation_gnn.md  ablation_ltr.md  ablation_rrf_bm25.md  adversarial_audit.md  approach.md  expansion_v2_audit.md  expert_mixture_audit.md  fairness_responsible_ai_audit.md  final_ablation.md  final_top100_audit.md  llm_expansion_audit.md  pairwise_expansion_audit.md  rank_stability_audit.md  robustness_audit.md
eval/: ablation_evidence.py  ablation_fusion.py  ablation_gnn.py  ablation_ltr.py  ablation_report.py  audit_expert_mixture.py  audit_pairwise_expansion.py  baseline_metrics.txt  build_golden_set.py  evaluate.py  fairness_audit.py  generate_top100_audit.py  golden_labels.csv  golden_set_to_label.md  metrics.py  rank_stability_audit.py  robustness_audit.py
precompute/: analyze_dataset.py  build_deck.py  build_embeddings.py  build_graph.py  build_sparse.py  llm_adversarial.py  llm_label.py  llm_pairwise.py  llm_probe.py  select_expansion_v2.py  select_llm_expansion.py  train_gnn.py  train_ltr.py
sandbox/: app.py
src/: candidate_brief.py  coarse_filter.py  config.py  evidence_graph.py  expert_scores.py  fusion.py  gnn_scores.py  honeypot_detector.py  jd_query.py  llm_client.py  llm_expansion.py  llm_judge.py  loader.py  (+7 more)
(+10 files in other folders)
