[project]
name = "india-runs"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
]

[project.optional-dependencies]
ltr = [
    "joblib>=1.5.3",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
]
graph = [
    "networkx>=3.6.1",
    "node2vec>=0.4.3",
    "setuptools<80",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
